<resources>
    <string name="app_name">FaceTrack</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan">Scan</string>
    <string name="program">Program</string>
    <string name="profile">Profile</string>
    <string name="email_not_valid">Email Tidak Valid</string>
    <string name="password_validation">Password tidak boleh kurang dari 8 karakter</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Masuk</string>
    <string name="logo">SkinTrack</string>
    <string name="welcome">Selamat Datang</string>
    <string name="forget_password">Lupa Password?</string>
    <string name="new_account">Belum punya akun?</string>
    <string name="daftar_disini">Daftar disini</string>
    <string name="atau">Atau</string>
    <string name="cpass">Konfirmasi Password</string>
    <string name="have_account">Sudah punya akun?</string>
    <string name="masuk_disini">Masuk disini</string>
    <string name="register">Daftar</string>
    <string name="name">Nama</string>
    <string name="phone">Telepon</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="done">Selesai</string>
    <string name="reset">Kirim</string>
    <string name="message_reset">Masukkan email kamu yang sudah terdaftar\nuntuk menerima kode verifikasi</string>
    <string name="name_user">Muhammad Arif Faizin</string>
    <string name="deteksi_terakhir">Deteksi Terakhir mu</string>
    <string name="program_selesai">Wah ada program yang udah selesai</string>
    <string name="artikel">Artikel yang mungkin kamu butuh</string>
    <string name="ketentuan_scan">Baca Ketentuan Berikut :</string>
    <string name="poin_ketentuan">1. Lepaskan kacamata anda sebelum memulai scan\n2. Pastikan rambut anda tidak menutup bagian muka anda\n3. Fokuskan kamera pada bagian masalah wajah anda</string>
    <string name="buat_program">Buat Program</string>
    <string name="no_program">Kamu belum ada program yang aktif nich</string>
    <string name="nama_program">Nama Program</string>
    <string name="nama_produk">Produk (misal: SkincareA, SkincareB)</string>
    <string name="add_program">Tambah Program</string>
    <string name="registrasi">Registrasi</string>
    <string name="reset_password">Reset Password</string>
    <string name="selesai">Selesai</string>
    <string name="scan_result">Hasil Scan</string>
    <string name="result">Hasil</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="loremipsum">Lorem Ipsum\nLorem Ipsum\nLorem Ipsum</string>
    <string name="saran">Saran</string>
    <string name="simpan">Simpan</string>
    <string name="selamat">Selamat!!\nProgram mu telah Selasai</string>
    <string name="backtohome">Kembali ke Home</string>
    <string name="title_intro_1">Selamat Datang di SkinTrack!</string>
    <string name="subtitle_intro_1">Aplikasi yang mempermudah dalam tracking masalah wajahmu dengan bantuan AI!</string>
    <string name="title_intro_2">Scan, Simpan, Sempurnakan</string>
    <string name="subtitle_intro_2">Hanya 3 langkah mudah untuk mengetahui perjalanan perawatan kulit wajah anda</string>
    <string name="title_intro_3">Bergabung menjadi SkinTrackers</string>
    <string name="subtitle_intro_3">Siap untuk mencapai kulit wajah yang sehat yang selalu anda inginkan?</string>
    <string name="datapribadi">Data Pribadi</string>
    <string name="ttl">TTL</string>
    <string name="none">-</string>
    <string name="logout">Logout</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="kirim_ulang">Kirim Ulang</string>
    <string name="tambah">Tambah</string>
    <string name="sub_intro_update">Sepertinya datamu belum di update, yuk klik disini buat update data mu</string>
    <string name="update_data_user">Update Data User</string>
    <string name="instruksi_otp">Masukkan 4 digit angka yang sudah dikirim ke</string>
    <string name="skintrack">SkinTrack</string>
    <string name="produk">Produk</string>
    <string name="tanggal_mulai">Tanggal Mulai</string>
    <string name="hasil_scan">Hasil Scan</string>
    <string name="detail_program">Detail Program</string>
</resources>