<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bangkit2024.facetrack.ui.fragments.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.bangkit2024.facetrack.ui.fragments.scan.ScanFragment"
        android:label="@string/scan"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/navigation_program"
        android:name="com.bangkit2024.facetrack.ui.fragments.program.ProgramFragment"
        android:label="@string/program"
        tools:layout="@layout/fragment_program" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.bangkit2024.facetrack.ui.fragments.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>