<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".ui.activities.register.RegisterActivity">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_back_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_program"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/registrasi"
        android:textAlignment="center"
        android:textColor="@color/black_title"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent" />

    <com.bangkit2024.facetrack.ui.customview.CustomEmailInput
        android:id="@+id/emailEditTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_program"
        app:startIconDrawable="@drawable/ic_email_24"
        app:startIconTint="@color/black_subtitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_regist_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/grey_bold"
            android:textSize="12sp"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.bangkit2024.facetrack.ui.customview.CustomEmailInput>

    <com.bangkit2024.facetrack.ui.customview.CustomPassInput
        android:id="@+id/passwordEditTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout"
        app:startIconDrawable="@drawable/ic_lock_24"
        app:startIconTint="@color/black_subtitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_regist_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/grey_bold"
            android:textSize="12sp"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />
    </com.bangkit2024.facetrack.ui.customview.CustomPassInput>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cpassEditTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout"
        app:startIconDrawable="@drawable/ic_lock_24"
        app:startIconTint="@color/black_subtitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_regist_cpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/cpass"
            android:inputType="textPassword"
            android:textColorHint="@color/grey_bold"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/bg_btn_primary_filled"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cpassEditTextLayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/registerButton">

        <TextView
            android:id="@+id/tv_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/have_account" />

        <TextView
            android:id="@+id/tv_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/masuk_disini"
            android:textColor="@color/primary_purple" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/white"
        android:maxWidth="35dp"
        android:maxHeight="35dp"
        android:minWidth="10dp"
        android:minHeight="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/registerButton"
        app:layout_constraintEnd_toEndOf="@id/registerButton"
        app:layout_constraintStart_toStartOf="@id/registerButton"
        app:layout_constraintTop_toTopOf="@id/registerButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>